<resources>
    <string name="app_name">DiZappFinal</string>

    <string name="safety_tips">SAFETY TIPS</string>
    <string name="earthquake">EARTHQUAKE</string>

    <string name="BEFORE">BEFORE</string>
    <string name="DURING">DURING</string>
    <string name="AFTER">AFTER</string>

    <string name="landslide">LANDSLIDE</string>
    <string name="flood">FLOOD</string>
    <string name="survival_kit">SURVIVAL KIT</string>
    <string name="sk_water">WATER</string>
    <string name="sk_food">FOOD</string>
    <string name="sk_clothes">EXTRA CLOTHING</string>
    <string name="sk_warmer">BODY WARMERS</string>
    <string name="sk_shelter">SHELTER</string>
    <string name="sk_extracash">EXTRA CASH</string>
    <string name="sk_docs">PERSONAL DOCUMENTS</string>
    <string name="sk_firstaid">FIRST AID KIT</string>
    <string name="sk_sanitation">SANITATION PRODUCTS</string>
    <string name="sk_medication">MEDICATIONS</string>
    <string name="sk_matches">MATCHES</string>
    <string name="sk_glasses">GLASSES</string>
    <string name="sk_pocketknife">POCKET KNIFE</string>
    <string name="sk_map">MAP</string>
    <string name="sk_compass">COMPASS</string>
    <string name="sk_flashlight">FLASHLIGHT</string>
    <string name="sk_radio">RADIO</string>
    <string name="sk_knife">KNIFE</string>
    <string name="sk_mobileph">MOBILE PHONE</string>
    <string name="hp_sos">SOS</string>
    <string name="hp_map">MAPS</string>
    <string name="hp_ngo">NGO</string>
    <string name="hp_emergency">EMERGENCY</string>
    <string name="hp_faq">FAQ</string>
    <string name="hp_translate">TRANSLATE</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="weather">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_earthquaketips">earthquaketips</string>
    <string name="safetytips">SAFETY TIPS</string>
    <string name="survivalkit">SURVIVAL KIT</string>
    <string name="wttips">EMERGENCY SAFETY TIPS</string>
    <string name="tips_description">Guidelines and safety tips that will ensure your safety during natural disasters.</string>
    <string name="wtmaps">OFFLINE MAPS</string>
    <string name="maps_description">Offline maps that navigate you to the nearest safe place during a natural disaster</string>
    <string name="wttools">EMERGENCY TOOLS</string>
    <string name="tools_description">Emergency tools like compass and flashlight that can help you get out of disaster prone areas.</string>
    <string name="wtsos">SOS</string>
    <string name="sos_description">Sends distress signal when the user is in a disaster affected area.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="safeplaces">SAFEPLACE</string>
    <string name="locations">DISASTER LOCATIONS</string>



</resources>
