<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pradnya.dizappfinal.Maps">

                <RelativeLayout
                    android:layout_width="385dp"
                    android:layout_height="61dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:id="@+id/textGrid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/hp_map"
                        android:textColor="@android:color/black"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="384dp"
        android:layout_height="456dp"
        android:layout_marginTop="60dp"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <!-- Row 1 -->

        <!-- Column 1 -->

        <!-- Column 2 -->

        <android.support.v7.widget.CardView
            android:id="@+id/SafePlaces"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            tools:ignore="MissingConstraints"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/safeplaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safeplaces"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/safeplaces"
                    android:src="@drawable/policestn"
                    android:layout_margin="10dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/DisasterLocations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/disasterlocations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locations"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/locations"
                    android:src="@drawable/locations"
                    android:layout_margin="10dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Column 2 -->

    </GridLayout>

</RelativeLayout>
